<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_daily">DailyActivity</string>
    <string name="open_location_settings">Open Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="wind_speed">%d mph</string>
    <string name="degrees">%d °</string>
    <string name="precip_probability">%d \%</string>
    <string name="time_at">%s At</string>
    <string name="network_not_available">GPS network is not enabled</string>
    <string name="ask_for_sweater_weather">What\'s your sweater weather?</string>
    <string name="farenheit_hint">Farenheit</string>
    <string name="done_button">Done</string>
    <string name="sweater_weather_text">Sweater Weather</string>
    <string name="prompt_set_sweater_weather">1. Set your sweater weather!</string>
    <string name="whats_your_sweater_weather">What\'s your sweater weather?</string>

</resources>
