<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context="net.rmoreno.weatherapp.ui.IntroActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/sweater_weather_text"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/step_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/prompt_set_sweater_weather"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/temperature_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/step_one"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whats_your_sweater_weather"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/farenheit_hint"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/done"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_selector"
        android:text="@string/done_button"
        android:textColor="#3498DB"
        android:textSize="30sp" />

</RelativeLayout>
